[package]
edition = "2018"
name = "crabby-bot"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
reqwest = {version = "0.11.4", features = ["json"]}
serde_json = "1"
tokio = {version = "1", features = ["full"]}
